library_files = files(
    'plugins/SpitInterfaces.vala',
    'plugins/TransitionsInterfaces.vala'
)

photos_files = files(
    'AppDirs.vala',
    'Application.vala',
    'AppWindow.vala',
    'BatchImport.vala',
    'Box.vala',
    'CollectionViewManager.vala',
    'ColorTransformation.vala',
    'CommandManager.vala',
    'Commands.vala',
    'CustomComponents.vala',
    'Dimensions.vala',
    'DirectoryMonitor.vala',
    'Event.vala',
    'Exporter.vala',
    'FullScreenWindow.vala',
    'LibraryFiles.vala',
    'LibraryMonitor.vala',
    'main.vala',
    'MediaDataRepresentation.vala',
    'MediaInterfaces.vala',
    'MediaMetadata.vala',
    'MediaMonitor.vala',
    'MediaViewTracker.vala',
    'MetadataWriter.vala',
    'Orientation.vala',
    'PageWindow.vala',
    'PhotoMonitor.vala',
    'Photo.vala',
    'PixbufCache.vala',
    'Printing.vala',
    'Resources.vala',
    'SearchFilter.vala',
    'SortedList.vala',
    'Tag.vala',
    'ThumbnailCache.vala',
    'Thumbnail.vala',
    'TimedQueue.vala',
    'Tombstone.vala',
    'Upgrades.vala',
    'VideoMetadata.vala',
    'VideoMonitor.vala',
    'VideoSupport.vala',
    'ZoomBuffer.vala',

    'camera/Branch.vala',
    'camera/CameraTable.vala',
    'camera/GPhoto.vala',

    'Checkerboard/CheckerboardItem.vala',
    'Checkerboard/CheckerboardItemText.vala',
    'Checkerboard/CheckerboardLayout.vala',

    'Dialogs/AdjustDateTimeDialog.vala',
    'Dialogs/Dialogs.vala',
    'Dialogs/ExportDialog.vala',
    'Dialogs/PreferencesDialog.vala',
    'Dialogs/ProgressDialog.vala',
    'Dialogs/SavedSearchDialog.vala',
    'Dialogs/TextEntryDialog.vala',

    'config/ConfigurationInterfaces.vala',
    'config/Config.vala',
    'config/GSettingsEngine.vala',

    'core/AbstractViewManager.vala',
    'core/Alteration.vala',
    'core/ContainerSourceCollection.vala',
    'core/DatabaseSourceCollection.vala',
    'core/DataCollection.vala',
    'core/DataObject.vala',
    'core/DataSet.vala',
    'core/DataSourceTypes.vala',
    'core/DataSource.vala',
    'core/DataViewTypes.vala',
    'core/DataView.vala',
    'core/SourceCollection.vala',
    'core/SourceHoldingTank.vala',
    'core/SourceInterfaces.vala',
    'core/Tracker.vala',
    'core/util.vala',
    'core/ViewCollection.vala',

    'db/DatabaseTable.vala',
    'db/Db.vala',
    'db/EventTable.vala',
    'db/PhotoTable.vala',
    'db/SavedSearchDBTable.vala',
    'db/TagTable.vala',
    'db/TombstoneTable.vala',
    'db/VersionTable.vala',
    'db/VideoTable.vala',

    'direct/DirectPhoto.vala',
    'direct/Direct.vala',
    'direct/DirectView.vala',
    'direct/DirectWindow.vala',

    'editing_tools/AdjustTool.vala',
    'editing_tools/CropTool.vala',
    'editing_tools/EditingTools.vala',
    'editing_tools/EditingToolWindow.vala',
    'editing_tools/PhotoCanvas.vala',
    'editing_tools/RedEyeTool.vala',
    'editing_tools/StraightenTool.vala',

    'events/Branch.vala',
    'events/EventDirectoryItem.vala',

    'library/Branch.vala',
    'library/FlaggedSidebarEntry.vala',
    'library/ImportQueueSidebarEntry.vala',
    'library/LastImportSidebarEntry.vala',
    'library/Library.vala',
    'library/LibraryWindow.vala',
    'library/OfflineSidebarEntry.vala',
    'library/TopDisplay.vala',
    'library/TrashSidebarEntry.vala',

    'photos/BmpSupport.vala',
    'photos/GdkSupport.vala',
    'photos/GifSupport.vala',
    'photos/GRaw.vala',
    'photos/JfifSupport.vala',
    'photos/PhotoFileAdapter.vala',
    'photos/PhotoFileFormat.vala',
    'photos/PhotoFileSniffer.vala',
    'photos/PhotoMetadata.vala',
    'photos/PngSupport.vala',
    'photos/RawSupport.vala',
    'photos/TiffSupport.vala',
    'photos/WebPSupport.vala',

    'plugins/Plugins.vala',
    'plugins/StandardHostInterface.vala',
    'plugins/ManifestWidget.vala',

    'searches/Branch.vala',
    'searches/SearchBoolean.vala',

    'sidebar/Branch.vala',
    'sidebar/common.vala',
    'sidebar/Entry.vala',
    'sidebar/Tree.vala',

    'sidebar/metadata/BasicProperties.vala',
    'sidebar/metadata/ExtendedProperties.vala',
    'sidebar/metadata/LibraryProperties.vala',
    'sidebar/metadata/MetadataSidebar.vala',
    'sidebar/metadata/Properties.vala',

    'slideshow/Slideshow.vala',
    'slideshow/TransitionEffects.vala',

    'tags/Branch.vala',
    'tags/HierarchicalTagIndex.vala',
    'tags/HierarchicalTagUtilities.vala',

    'threads/BackgroundJob.vala',
    'threads/Semaphore.vala',
    'threads/Workers.vala',

    'util/DragAndDropHandler.vala',
    'util/file.vala',
    'util/image.vala',
    'util/KeyValueMap.vala',
    'util/misc.vala',
    'util/string.vala',
    'util/system.vala',
    'util/ui.vala',
    'util/Util.vala',

    'Views/CheckerboardPage.vala',
    'Views/CollectionPage.vala',
    'Views/DirectPhotoPage.vala',
    'Views/EditingHostPage.vala',
    'Views/EventPage.vala',
    'Views/EventsDirectoryPage.vala',
    'Views/FlaggedPage.vala',
    'Views/ImportPage.vala',
    'Views/ImportQueuePage.vala',
    'Views/LastImportPage.vala',
    'Views/LibraryPhotoPage.vala',
    'Views/MediaPage.vala',
    'Views/OfflinePage.vala',
    'Views/Page.vala',
    'Views/PhotosPage.vala',
    'Views/RawsPage.vala',
    'Views/SavedSearchPage.vala',
    'Views/SinglePhotoPage.vala',
    'Views/SlideshowPage.vala',
    'Views/TagPage.vala',
    'Views/TrashPage.vala',
    'Views/VideosPage.vala',

    'Widgets/AbstractSearchRow.vala',
    'Widgets/EditableTitle.vala',
    'Widgets/TransitionEffectSelector.vala',
    'Widgets/SearchRowContainer.vala',
    'Widgets/SearchRowDate.vala',
    'Widgets/SearchRowFlagged.vala',
    'Widgets/SearchRowMediaType.vala',
    'Widgets/SearchRowModified.vala',
    'Widgets/SearchRowText.vala',
    'Widgets/SliderAssembly.vala',
    'Widgets/ContractMenuItem.vala',
    'Widgets/CustomPrintTab.vala'
)

photos_exe = executable(
    meson.project_name(),
    photos_files,
    library_files,
    icons_gresource,
    global_gresource,
    dependencies: dependencies,
    include_directories: vapi_include,
    export_dynamic: true,
    install: true
)

# We declare a dependency to be used by plugins
photos_dep = declare_dependency(
    dependencies: dependencies,
    include_directories: [vapi_include, include_directories('.')],
    link_with: photos_exe
)
