shared_module(
    'pantheon-photos-publishing-extras',
    'shotwell-publishing-extras.vala',
    'YandexPublishing.vala',
    'TumblrPublishing.vala',
    'Resources.vala',
    'RESTSupport.vala',
    publishing_extras_gresource,
    dependencies: photos_dep,
    install: true,
    install_dir: pluginsdir
)
