shared_module(
    'pantheon-photos-publishing',
    'FacebookPublishing.vala',
    'FlickrPublishing.vala',
    'PicasaPublishing.vala',
    'PiwigoPublishing.vala',
    'shotwell-publishing.vala',
    'YouTubePublishing.vala',
    'Resources.vala',
    'RESTSupport.vala',
    publishing_gresource,
    dependencies: photos_dep,
    install: true,
    install_dir: pluginsdir
)
