shared_module(
    'pantheon-photos-transitions',
    'StripesEffect.vala',
    'SquaresEffect.vala',
    'SlideEffect.vala',
    'shotwell-transitions.vala',
    'Resources.vala',
    'FadeEffect.vala',
    'CrumbleEffect.vala',
    'ClockEffect.vala',
    'CirclesEffect.vala',
    'CircleEffect.vala',
    'ChessEffect.vala',
    'BlindsEffect.vala',
    transitions_gresource,
    dependencies: elementary_photos_dep,
    install: true,
    install_dir: pluginsdir
)
